--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "esbuild": "^0.24.2",
     "express": "^4.21.2",
+    "mongodb": "^6.15.0",
     "nanoid": "^3.3.8",
     "node-fetch": "^2.7.0",
     "picocolors": "^1.1.1",
