--- a/service/package.json
+++ b/service/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mongodb": "^6.15.0",
     "uuid": "^11.1.0"
   }
 }
