--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-router-dom": "^7.3.0",
     "rollup": "^4.34.6",
     "source-map-js": "^1.2.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
   },
   "repository": {
     "type": "git",
