--- a/service/package.json
+++ b/service/package.json
@@ -16,7 +16,6 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongodb": "^6.15.0",
-    "uuid": "^11.1.0",
-    "ws": "^8.18.1"
+    "uuid": "^11.1.0"
   }
 }
